# rpc

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  bitprim-rpcConfig.cmake.in  build.py  conanfile.py  kth-rpcConfig.cmake.in
.travis/: push_other_repo.sh
_test_package/: conanfile.py
cmake/: FindZeroMQ.cmake
include/bitprim/: rpc.hpp
include/bitprim/rpc/: define.hpp  manager.hpp  messages.hpp  rpc_server.hpp  version.hpp
include/bitprim/rpc/http/: rpc_server.hpp  server_http.hpp
include/bitprim/rpc/json/: json.hpp
include/bitprim/rpc/messages/: error_codes.hpp  messages.hpp  utils.hpp
include/bitprim/rpc/messages/blockchain/: getaddressbalance.hpp  getaddressdeltas.hpp  getaddressmempool.hpp  getaddresstxids.hpp  getaddressutxos.hpp  getbestblockhash.hpp  getblock.hpp  getblockchaininfo.hpp  getblockcount.hpp  getblockhash.hpp  getblockhashes.hpp  getblockheader.hpp  getchaintips.hpp  getdifficulty.hpp  getheader.hpp  getrawtransaction.hpp  getspentinfo.hpp
include/bitprim/rpc/messages/keoken/: createasset.hpp  getallassets.hpp  getassets.hpp  getassetsbyaddress.hpp  getkeokenaddress.hpp  getkeokenblock.hpp  initkeoken.hpp  keokenutils.hpp  sendtoken.hpp
include/bitprim/rpc/messages/mining/: getblocktemplate.hpp  getmininginfo.hpp  submitblock.hpp
include/bitprim/rpc/messages/util/: getinfo.hpp  getnetworkinfo.hpp  validateaddress.hpp
include/bitprim/rpc/messages/wallet/: createsignature.hpp  createtransaction.hpp  newwallet.hpp  sendrawtransaction.hpp  setsignature.hpp
include/bitprim/rpc/zmq/: zmq_helper.hpp
include/kth/: rpc.hpp
include/kth/rpc/: define.hpp  manager.hpp  messages.hpp  version.hpp
include/kth/rpc/http/: rpc_server.hpp  server_http.hpp
include/kth/rpc/json/: json.hpp
include/kth/rpc/messages/: error_codes.hpp  messages.hpp  utils.hpp
include/kth/rpc/messages/blockchain/: getaddressbalance.hpp  getaddressdeltas.hpp  getaddressmempool.hpp  getaddresstxids.hpp  getaddressutxos.hpp  getbestblockhash.hpp  getblock.hpp  getblockchaininfo.hpp  getblockcount.hpp  getblockhash.hpp  getblockhashes.hpp  getblockheader.hpp  getchaintips.hpp  getdifficulty.hpp  getrawtransaction.hpp  getspentinfo.hpp
include/kth/rpc/messages/keoken/: createasset.hpp  getallassets.hpp  getassets.hpp  getassetsbyaddress.hpp  getkeokenaddress.hpp  getkeokenblock.hpp  initkeoken.hpp  keokenutils.hpp  sendtoken.hpp
include/kth/rpc/messages/mining/: getblocktemplate.hpp  getmininginfo.hpp  submitblock.hpp
include/kth/rpc/messages/util/: getinfo.hpp  getnetworkinfo.hpp  validateaddress.hpp
include/kth/rpc/messages/wallet/: createsignature.hpp  createtransaction.hpp  newwallet.hpp  sendrawtransaction.hpp  setsignature.hpp
include/kth/rpc/zmq/: zmq_helper.hpp
src/: manager.cpp  messages.cpp  rpc_server.cpp  testing-main.cpp
src/http/: rpc_server.cpp
src/messages/: utils.cpp
src/messages/blockchain/: getaddressbalance.cpp  getaddressdeltas.cpp  getaddressmempool.cpp  getaddresstxids.cpp  getaddressutxos.cpp  getbestblockhash.cpp  getblock.cpp  getblockchaininfo.cpp  getblockcount.cpp  getblockhash.cpp  getblockhashes.cpp  getblockheader.cpp  getchaintips.cpp  getdifficulty.cpp  getrawtransaction.cpp  getspentinfo.cpp
src/messages/mining/: getblocktemplate.cpp  getmininginfo.cpp  submitblock.cpp
src/messages/util/: getinfo.cpp  validateaddress.cpp
src/messages/wallet/: sendrawtransaction.cpp
src/zmq/: zmq_helper.cpp
test/: rpc.cpp  test_helpers.hpp  testing-main.cpp  user_agent_dummy.cpp
test_package/: conanfile.py
